# dotfiles

./: .gitignore  CMakeLists.txt  Makefile  README.md  crontab
_sandbox/: Dockerfile  Makefile
bash/: .bashrc  .env  .functions  .rosdev  CMakeLists.txt  Makefile
dotfiles/: .bash_alias  .bash_functions  .bashrc  crontab
dotfiles/alacritty/: alacritty.yml
dotfiles/bash/: .bash_alias  .bash_env  .bashrc
dotfiles/dconf-gnome/: org.gnome.desktop.wm.conf  org.gnome.settings-daemon.plugins.media-keys.conf
dotfiles/git/: .gitconfig
dotfiles/neofetch/: config.conf
dotfiles/nvim/: init.lua  nvim
dotfiles/nvim/plugin/: colors.vim  navigation.vim  statusline.vim
dotfiles/tmux/: .tmux.conf
misc/: CMakeLists.txt
nvim/: CMakeLists.txt  Makefile  init.vim
nvim/plugin/: clang-complete.vim  colors.vim  cp.vim  git.vim  navigation.vim  sets.vim  statusline.vim
nvim/templates/: cp.cpp  soln.cpp
scripts/: termd.sh
